bot time overflow issue fix

--- a/wwwroot/css/EbChatBot.css
+++ b/wwwroot/css/EbChatBot.css
@@ -80,7 +80,7 @@
     border-radius: 13px 13px 0px 13px;
     margin: 6px 5px 5px 50px;
     background-color: #fff;
-    padding-right: 41px;
+    padding-right: 47px;
     box-shadow: -1px 1px 6px rgba(0, 0, 0, 0.0784313725490196);
 }
 
